--- a/content/post/2019-02-01-找工log.md
+++ b/content/post/2019-02-01-找工log.md
@@ -81,7 +81,7 @@ DS面试可以考的很广，大家都是做这个领域的人，我也不想当
 
 + 算法  
 
-这个部分就不得不又提到陶总 [Link](https://www.linkedin.com/in/wesley-tao/) ，这个寒假他组的局约我们几个同学一起刷题，讨论题目，讨论OA，还是非常感谢他喊我去图书馆的。  
+这个部分就不得不又提到陶总 [Link](https://www.linkedin.com/in/wesley-tao/) ，这个寒假他组的局约我们几个同学一起刷题，讨论题目，讨论OA，还是非常感谢他喊我去图书馆的。另外他的算法课是A+，同为第一次学算法的人，我们当时四个人一起上课交流的学习小组中，他的分是最高的（有多高呢。。。就是期中100分的卷子，平均分三十来分，陶总作为班级第一考到了73分）。
 
 这里也不得不强推一下algorithm这门课，Prof. Drinea [link](https://datascience.columbia.edu/eleni-drinea) 的课讲的真的不错，第一次学算法的同学普遍觉得作业也很有(nan)意(ku)思(le)，很锻炼思维，可以为日后的刷题打下坚实的理论基础。   
 同时配合第一条食用，你就觉得哇，ML好好玩，比如思路最好理解的KNN，也可以利用特定的数据结构配合算法来加速计算，比如k-d tree, ball-tree。 [link](https://scikit-learn.org/stable/modules/neighbors.html#nearest-neighbor-algorithms)
